fix layout shift (borda movimentava o layout)

--- a/01-Nivel/06-Projeto-Formulario_de_Matricula/styles/fields/droparea.css
+++ b/01-Nivel/06-Projeto-Formulario_de_Matricula/styles/fields/droparea.css
@@ -1,5 +1,7 @@
 .dropzone {
-    border: 1px dashed var(--stroke-default);
+    /* border: 1px dashed var(--stroke-default); */
+    border: 2px dashed transparent;
+    outline: 1px dashed var(--stroke-default);
     border-radius: .25rem;
 
     display: grid;
@@ -23,7 +25,6 @@
     }
 
     &:hover, &:has(input:focus) {
-        border-width: 2px;
         border-color: var(--stroke-highlight);
         background-color: var(--surface-secondary);
 
