--- a/01-Nivel/06-Projeto-Formulario_de_Matricula/styles/form.css
+++ b/01-Nivel/06-Projeto-Formulario_de_Matricula/styles/form.css
@@ -7,6 +7,7 @@ form {
 fieldset {
     display: grid;
     gap: 1.5rem;
+    border: inherit;
 }
 
 legend {
